Fix a few spacing issues with the doc-header; Change the breadcrumb to say guides

--- a/src/main/content/_assets/css/doc-header.css
+++ b/src/main/content/_assets/css/doc-header.css
@@ -25,8 +25,8 @@
     padding-top: 10px;
 }
 
-#header_background{
-    padding-top: 103px;
+#header_background {
+    padding-top: 101px;
     background-color: #313653;
     background-image: none;
 }
@@ -99,6 +99,7 @@
     height: 100%;
     margin-bottom: 0;
     border-radius: 0;
+    white-space: nowrap;
 }
 
 #breadcrumb_row a {
@@ -212,7 +213,8 @@
 
     #breadcrumb_row .breadcrumb {
         overflow: auto;
-        /* white-space: nowrap; */
+        white-space: inherit;
+        padding-left: 15px;
     }
 }
 
